// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders default button correctly 1`] = `
<button
  className="button button--default"
  onClick={[Function]}
>
  Default Button
</button>
`;

exports[`Button renders disabled button correctly 1`] = `
<button
  className="button button--disabled"
  onClick={[Function]}
>
  Disabled Button
</button>
`;

exports[`Button renders selected button correctly 1`] = `
<button
  className="button button--selected button--default"
  onClick={[Function]}
>
  Selected Button
</button>
`;
